--- a/index.css
+++ b/index.css
@@ -1,5 +1,13 @@
 html{ font-family: sans-serif;
 }
+li{
+    padding: 5px;
+    margin-bottom: : 10px;
+}
+
+li:hover{
+    background-color: lightgreen;
+}
 .pomodoro-estimate{
     color:red;
     font-weight: bold;
@@ -11,7 +19,7 @@ html{ font-family: sans-serif;
 
 #add-new-todo-button{
     font-size: 20px;
-    color: FFF;
+    color: #FFF;
     outline: none;
     border-style: none;
     padding: 10px;
