--- a/show.css
+++ b/show.css
@@ -4,3 +4,12 @@ h2{
     font-size;32px;
     margin:20px 0px;
 }
+
+#image-2{
+    
+    width: 300px;
+    height:300px;
+    display: block
+    
+}
+    
